<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoContacto" >

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/nombre_label" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTelefono"
        android:layout_below="@+id/tvTelefono"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/cbFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btCancelar"
        android:layout_alignLeft="@+id/etFax"
        android:layout_marginBottom="24dp"
        android:text="@string/favorito_label" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etFax"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/fax_label" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etMovil"
        android:layout_alignLeft="@+id/etApellidos"
        android:text="@string/movil_label" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textview3"
        android:layout_below="@+id/tvNombreApellidos"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etTelefono"
        android:layout_alignLeft="@+id/tvNombreApellidos"
        android:text="@string/telefono_label" />

    <Button
        android:id="@+id/btAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tvNombreApellidos"
        android:text="@string/btaceptar_label" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btAceptar"
        android:layout_alignBottom="@+id/btAceptar"
        android:layout_toRightOf="@+id/btAceptar"
        android:text="@string/btcancelar_label" />

    <TextView
        android:id="@+id/tvNombreApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNombre"
        android:layout_below="@+id/etNombre"
        android:text="@string/apellidos_label" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etFax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cbFavorito"
        android:layout_alignLeft="@+id/textView5"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etMovil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:ems="10"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/ivImagenContacto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btImagen"
        android:layout_alignRight="@+id/tvTelefono"
        android:layout_below="@+id/tvTelefono"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btImagen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvTelefono"
        android:layout_below="@+id/tvNombreApellidos"
        android:text="@string/btimagen_label" />

</RelativeLayout>